[gd_scene load_steps=16 format=3 uid="uid://bc58e56cvdshw"]

[ext_resource type="Script" path="res://scripts/local_player/local_player.gd" id="1_pdmw3"]
[ext_resource type="FontFile" uid="uid://b3wau748jika8" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="2_1s04p"]
[ext_resource type="SpriteFrames" uid="uid://d0x11wkowmmtk" path="res://assets/sprites/dinos/dino_red.tres" id="3_e7qf3"]
[ext_resource type="Script" path="res://scripts/local_player/state_machine/local_player_state_machine.gd" id="4_ycehc"]
[ext_resource type="Script" path="res://scripts/local_player/state_machine/local_player_attack.gd" id="5_58luv"]
[ext_resource type="Script" path="res://scripts/local_player/state_machine/local_player_crouch.gd" id="6_6k4y0"]
[ext_resource type="Script" path="res://scripts/local_player/state_machine/local_player_hurt.gd" id="7_ibuoi"]
[ext_resource type="Script" path="res://scripts/local_player/state_machine/local_player_idle.gd" id="8_3wk4s"]
[ext_resource type="Script" path="res://scripts/local_player/state_machine/local_player_run.gd" id="9_rii4k"]
[ext_resource type="Script" path="res://scripts/local_player/state_machine/local_player_walk.gd" id="10_d86j4"]
[ext_resource type="AudioStream" uid="uid://cfv6uqb72ghdf" path="res://assets/sfx/dirt_run.wav" id="11_n1bjr"]
[ext_resource type="AudioStream" uid="uid://dcutcy4024dpe" path="res://assets/sfx/dirt_walk.wav" id="12_4a1p7"]
[ext_resource type="AudioStream" uid="uid://dwitw6kmwci8u" path="res://assets/sfx/rawr.wav" id="13_f2sjy"]

[sub_resource type="Theme" id="Theme_tw71y"]

[sub_resource type="CircleShape2D" id="CircleShape2D_d48j1"]
radius = 5.0

[node name="Player" type="CharacterBody2D"]
scale = Vector2(3, 3)
script = ExtResource("1_pdmw3")

[node name="Label" type="Label" parent="."]
offset_left = -20.0
offset_top = -28.0
offset_right = 38.0
offset_bottom = -5.0
scale = Vector2(0.6, 0.6)
theme = SubResource("Theme_tw71y")
theme_override_colors/font_shadow_color = Color(0.473976, 0.473976, 0.473976, 1)
theme_override_fonts/font = ExtResource("2_1s04p")
theme_override_font_sizes/font_size = 8
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, -9)
sprite_frames = ExtResource("3_e7qf3")
animation = &"attack"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -5.33334)
shape = SubResource("CircleShape2D_d48j1")

[node name="PlayerStateMachine" type="Node" parent="."]
script = ExtResource("4_ycehc")

[node name="Attack" type="Node" parent="PlayerStateMachine"]
script = ExtResource("5_58luv")

[node name="Crouch" type="Node" parent="PlayerStateMachine"]
script = ExtResource("6_6k4y0")

[node name="Hurt" type="Node" parent="PlayerStateMachine"]
script = ExtResource("7_ibuoi")

[node name="Idle" type="Node" parent="PlayerStateMachine"]
script = ExtResource("8_3wk4s")

[node name="Run" type="Node" parent="PlayerStateMachine"]
script = ExtResource("9_rii4k")

[node name="Walk" type="Node" parent="PlayerStateMachine"]
script = ExtResource("10_d86j4")

[node name="Sfx_Run" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_n1bjr")

[node name="Sfx_Walk" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_4a1p7")

[node name="Sfx_Attack" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_f2sjy")
pitch_scale = 0.6
